sysconfig/iptables
# Generated by iptables-save v1.4.7 on Tue Jul 31 19:08:18 2018
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Jul 31 19:08:18 2018
# Generated by iptables-save v1.4.7 on Tue Jul 31 19:08:18 2018
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Jul 31 19:08:18 2018
# Generated by iptables-save v1.4.7 on Tue Jul 31 19:08:18 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -s 100.110.120.40/32 -d 100.110.120.30/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 100.110.120.254/32 -d 100.110.120.30/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 198.122.0.200/32 -d 198.122.0.1/32 -i eth3 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 198.123.0.200/32 -d 198.123.0.1/32 -i eth2 -p tcp -m tcp --dport 2404 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 198.124.0.200/32 -d 198.124.0.1/32 -i eth4 -p tcp -m tcp --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 193.122.0.10/32 -d 193.122.0.101/32 -i eth5 -p tcp -m tcp --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.30/32 -i eth1 -p tcp -m tcp --dport 6802 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.30/32 -i eth1 -p tcp -m tcp --sport 9009 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A OUTPUT -s 100.110.120.30/32 -d 100.110.120.40/32 -o eth1 -p tcp -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -s 100.110.120.30/32 -d 100.110.120.254/32 -o eth1 -p tcp -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -s 198.122.0.1/32 -d 198.122.0.200/32 -o eth3 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 198.123.0.1/32 -d 198.123.0.200/32 -o eth2 -p tcp -m tcp --sport 2404 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 198.124.0.1/32 -d 198.124.0.200/32 -o eth4 -p tcp -m tcp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 193.122.0.101/32 -d 193.122.0.10/32 -o eth5 -p tcp -m tcp --sport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.30/32 -d 100.110.120.20/32 -o eth1 -p tcp -m tcp --sport 6802 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.30/32 -d 100.110.120.20/32 -o eth1 -p tcp -m tcp --dport 9009 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.30/32 -d 100.110.120.50/32 -o eth1 -p udp -m udp --sport 1024:65535 -j ACCEPT 
COMMIT
# Completed on Tue Jul 31 19:08:18 2018
